--- a/ALL/project/public/style.css
+++ b/ALL/project/public/style.css
@@ -11978,6 +11978,51 @@ h1, .h1 {
   font-size: 26px;
 }
 
+body {
+  background-color: darkgray;
+}
+
 .frame {
   position: relative;
+}
+
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.item .data {
+  display: flex;
+  gap: 20px;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+.item .data .title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.confirm {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.confirm .info-table {
+  padding: 40px;
+  border: 2px solid crimson;
+  border-radius: 20px;
+}
+
+.view {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.view .show-table {
+  display: flex;
+  flex-direction: column;
 }
