--- a/K3 CRUD/src/style.scss
+++ b/K3 CRUD/src/style.scss
@@ -1,4 +1,4 @@
-
+@import "~bootstrap/scss/bootstrap";
 
 $gap: 20px;
 $gap-min: 10px;
@@ -114,4 +114,22 @@ main {
         text-align: center;
         align-self: flex-end;
     }            
+}
+
+.item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .data {
+        display: flex;
+        gap: 30px;
+        align-items: center;
+
+        .title {
+            font-size: 16px;
+            font-weight: bold;
+        }
+        
+    }
 }
