--- a/ALL/cookie/templates/login.html
+++ b/ALL/cookie/templates/login.html
@@ -7,6 +7,7 @@
     <title>Login</title>
 </head>
 <body>
+    <div data-response></div>
     <form data-login>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
