--- a/Mentorius/005 API/style.css
+++ b/Mentorius/005 API/style.css
@@ -92,3 +92,35 @@ thead {
     background-color: #000;
     cursor: default;
 }
+
+/* MODAL */
+
+#blur-div{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    backdrop-filter: blur(5px);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-div{
+    background-color: #111;
+    padding: 50px 60px;
+    position: relative;
+}
+
+#close-btn{
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    font-size: 2rem;
+}
+
+.content-div{
+
+}
