--- a/ALL/db/public/style.css
+++ b/ALL/db/public/style.css
@@ -2,6 +2,7 @@ body {
   font-family: monospace, sans-serif;
   margin: 0;
   padding: 0;
+  background-color: darkgray;
 }
 
 * {
@@ -19,7 +20,7 @@ section.view {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: darkgray;
   width: 25%;
 }
 section.view ul {
@@ -59,7 +60,7 @@ section.plant {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: darkgray;
   width: 25%;
 }
 section.plant form {
@@ -95,7 +96,7 @@ section.cut {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: darkgray;
   width: 25%;
 }
 section.cut form {
@@ -118,4 +119,34 @@ section.cut form button {
 }
 section.cut form button:hover {
   background-color: #c82333;
+}
+
+section.grow {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: darkgray;
+  width: 25%;
+}
+section.grow form {
+  display: flex;
+  flex-direction: column;
+}
+section.grow form input {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+section.grow form button {
+  padding: 10px;
+  background-color: #ffc107;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+section.grow form button:hover {
+  background-color: #e0a800;
 }
