--- a/ALL/db/src/style.scss
+++ b/ALL/db/src/style.scss
@@ -2,6 +2,7 @@ body {
     font-family: monospace, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: darkgray;
 }
 
 * {
@@ -19,7 +20,7 @@ section.view {
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: darkgray;
     width: 25%;
     ul {
         list-style-type: none;
@@ -60,7 +61,7 @@ section.plant {
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: darkgray;
     width: 25%;
     form {
         display: flex;
@@ -97,7 +98,7 @@ section.cut {
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: darkgray;
     width: 25%;
     form {
         display: flex;
@@ -118,6 +119,37 @@ section.cut {
 
             &:hover {
                 background-color: #c82333;
+            }
+        }
+    }
+}
+
+section.grow {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: darkgray;
+    width: 25%;
+    form {
+        display: flex;
+        flex-direction: column;
+        input {
+            margin-bottom: 10px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        button {
+            padding: 10px;
+            background-color: #ffc107;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+ 
+            &:hover {
+                background-color: #e0a800;
             }
         }
     }
